# hltv-api

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
app/api/: api.py
app/api/endpoints/: matches.py
app/schemas/matches/: __init__.py  match.py
app/services/: base.py
app/services/matches/: __init__.py  details.py  results.py  upcoming.py
app/storage/: __init__.py  base.py  csv_storage.py  models.py  postgres_storage.py
app/utils/: xpath.py
app/workers/: __init__.py  incremental.py  scraper.py
tests/: analyze_match_detailed.py  analyze_match_pages.py  analyze_stats_table.py
