[tool.poetry]
name = "hltv-api"
version = "0.1.0"
description = "HLTV API for match data"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
requests = "^2.32.3"
cloudscraper = "^1.2.71"
curl-cffi = ">=0.6.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.1.0"
slowapi = "^0.1.9"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
